dodanie list o stalych rozmiarach